--- a/BU Transit Redux/BU Transit Redux-Info.plist
+++ b/BU Transit Redux/BU Transit Redux-Info.plist
@@ -9,11 +9,11 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.rosstard.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.rosstard.BU-Transit</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>${PRODUCT_NAME}</string>
+	<string>BU-Transit</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
